# ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
# ███░▄▄▄█░▄▄▀█░▄▀▄░█░▄▄█░▄▀█░▄▄▀█▀▄▄▀██
# ███░█▄▀█░▀▀░█░█▄█░█░▄▄█░█░█░▀▀░█░██░██
# ███▄▄▄▄█▄██▄█▄███▄█▄▄▄█▄▄██▄██▄██▄▄███
# ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀

[package]
name = "gamedao-signal"
version = "1.3.0"
authors = ["zero.io","gamedao.co"]
repository = "https://github.com/gamedaoco/gamedao-protocol"
edition = "2018"
license = "GPL-3.0-or-later"
description = "SIGNAL is GameDAOs governance module providing simple interfaces to create proposals and vote on them"

[package.metadata.substrate]
categories = [
	"zero",
	"core",
	"pallet"
]

[dependencies]
serde = { version = "1.0.143", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false, optional = true }
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch= "polkadot-v0.9.39", default-features = false }
gamedao-traits = { package = "gamedao-traits", path = "../traits", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39", default-features=false }

[dev-dependencies]
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.39" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.39" }

pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch= "polkadot-v0.9.39", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch= "polkadot-v0.9.39", default-features = false }

gamedao-control = { path = "../control", default-features = true }
gamedao-flow = { path = "../flow", default-features = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"gamedao-traits/runtime-benchmarks",
	"gamedao-control/runtime-benchmarks",
	"gamedao-flow/runtime-benchmarks"
]
std = [
	"codec/std",
	"serde/std",
	"scale-info/std",

	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",

	"sp-std/std",

	"orml-traits/std",
	"orml-tokens/std",
	"orml-currencies/std",

	"gamedao-traits/std"
]
try-runtime = ["frame-support/try-runtime"]
