[package]
name = 'module-tangram'
version = '1.0.0'

edition = '2018'
license = 'Unlicense'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.103", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
num_enum = { version = "0.5.1", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

frame-support = { version = "3.0.0", default-features = false, path = "../../frame/support" }
frame-system = { version = "3.0.0", default-features = false, path = "../../frame/system" }
sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }
sp-core = { version = "3.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "3.0.0", default-features = false, path = "../../primitives/io" }

balances = { package = "pallet-balances", version = "3.0.0", default-features = false, path = "../../frame/balances" }

primitives = { package = "zero-primitives", path = "../../bin/primitives", default-features = false }
timestamp = { package = "pallet-timestamp", version = "3.0.0", default-features = false, path = "../../frame/timestamp" }

# control = { package = "module-control", path = "../control", default-features = false }

[features]
default = ['std']
std = [
	"serde",
	"codec/std",
	"num_enum/std",

    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
    'balances/std'
]
