[package]
name = "gamedao-traits"
version = "1.3.0"
authors = ["zero.io","gamedao.co"]
edition = "2018"
license = "GPL-3.0-or-later"
description = ""
repository = "https://github.com/gamedaoco/gamedao-protocol"


[dependencies]
serde = { version = "1.0.143", default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde/std",
	"scale-info/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
