[package]
name = "module-crowdfunding"
version = "0.1.0"
authors = ['zero.io','gamedao.co']
repository = ''
edition = "2018"
license = "GPL-3.0-or-later"
description = "module-crowdfunding"

[package.metadata.substrate]
categories = [
	"module",
]
compatibility_version = "2.0.0"

[features]
default = ['std']
std = [
	'serde/std',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'balances/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-core/std',
	'sp-storage/std'
]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
serde = { version = "1.0.101", optional = true }

sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
sp-storage = { version = "2.0.0", default-features = false, path = "../../primitives/storage" }
sp-core = { version = "2.0.0", default-features = false, path = "../../primitives/core" }
sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }

frame-support = { version = "2.0.0", default-features = false, path = "../../frame/support" }
frame-system = { version = "2.0.0", default-features = false, path = "../../frame/system" }
balances = { package = "pallet-balances", version = "2.0.0", default-features = false, path = "../../frame/balances" }
sp-io = { version = "2.0.0", default-features = false, path = "../../primitives/io" }

# [dev-dependencies]

