# ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
# ███░▄▄▄█░▄▄▀█░▄▀▄░█░▄▄█░▄▀█░▄▄▀█▀▄▄▀██
# ███░█▄▀█░▀▀░█░█▄█░█░▄▄█░█░█░▀▀░█░██░██
# ███▄▄▄▄█▄██▄█▄███▄█▄▄▄█▄▄██▄██▄██▄▄███
# ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀

[package]
name = "module-governance"
version = "1.0.1-dev"
authors = ['zero.io','gamedao.co']
repository = ''
edition = "2018"
license = "GPL-3.0-or-later"
description = "signal"

[package.metadata.substrate]
categories = ["pallet"]

[dependencies]
serde = { version = "1.0.103", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

frame-support = { version = "3.0.0", default-features = false, path = "../../frame/support" }
frame-system = { version = "3.0.0", default-features = false, path = "../../frame/system" }
balances = { package = "pallet-balances", version = "3.0.0", default-features = false, path = "../../frame/balances" }
timestamp = { package = "pallet-timestamp", version = "3.0.0", default-features = false, path = "../../frame/timestamp" }

sp-runtime = { version = "3.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "3.0.0", default-features = false, path = "../../primitives/std" }
sp-core = { version = "3.0.0", default-features = false, path = "../../primitives/core" }

primitives = { package = "zero-primitives", path = "../../bin/primitives", default-features = false }

control = { package = "module-control", path = "../control", default-features = false }
crowdfunding = { package = "module-crowdfunding", path = "../crowdfunding", default-features = false }

[features]
default = ['std']
std = [
	'serde/std',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'balances/std',
	'timestamp/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-core/std',
]
