[package]
name = "nft-factory"
version = "0.0.1"
authors = ["ZERO, Acala Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
enumflags2 = { version = "0.6.3" }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-proxy = { version = "2.0.0", default-features = false }
primitives = { package = "zero-primitives", path = "../../zero/primitives", default-features = false }
orml-utilities = { path = "../../vendors/orml/utilities", default-features = false }
orml-traits = { path = "../../vendors/orml/traits", default-features = false }
orml-nft = { path = "../../vendors/orml/nft", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0" }
pallet-utility = { version = "2.0.0", default-features = false }
orml-currencies = { path = "../../vendors/orml/currencies", default-features = false }
orml-tokens = { path = "../../vendors/orml/tokens", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-proxy/std",
	"primitives/std",
	"orml-utilities/std",
	"orml-traits/std",
	"orml-nft/std",
]
