[package]
name = "zero-primitives"
version = "0.1.0"
authors = ["ZERO.IO"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }

sp-core = { version = "2.0.0", default-features = false, path = "../../primitives/core" }
sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime"}
sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std"}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
