[package]
name = "skillz"
version = "0.0.1"
authors = ["zero"]
repository = ""
edition = "2018"
license = "GPL-3.0-or-later"
description = "A skill and skore aggregator"

[package.metadata.substrate]
categories = [
	"zero","core"
]
compatibility_version = "2.0.0"

[features]
default = ["std"]
std = [
	"codec/std",
	"serde/std",

	"pallet-assets/std",
	"pallet-balances/std",
	"frame-support/std",
	"frame-system/std",

	"sp-core/std",
	"sp-std/std",
	"sp-storage/std",
	"sp-runtime/std",
]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

sp-core = { version = "2.0.0", default-features = false, path = "../../primitives/core" }
sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
sp-storage = { version = "2.0.0", default-features = false, path = "../../primitives/storage" }

pallet-assets = { version = "2.0.0", default-features = false, path = "../../frame/assets" }
pallet-balances = { version = "2.0.0", default-features = false, path = "../../frame/balances" }
frame-support = { version = "2.0.0", default-features = false, path = "../../frame/support" }
frame-system = { version = "2.0.0", default-features = false, path = "../../frame/system" }

[dev-dependencies]
sp-core = { version = "2.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "2.0.0", default-features = false, path = "../../primitives/io" }
