[package]
name = "synapse"
version = "2.0.0"
authors = ['zero']
edition = "2018"
repository = "https://github.com/substrate-developer-hub/recipes/"
license = "GPL-3.0-or-later"
description = "A pallet that demonstrates many aspects of offchain workers"

[package.metadata.substrate]
categories = [
	"pallet",
	"offchain worker",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0"

[dependencies]

# external dependencies

parity-scale-codec = { default-features = false, features = ['derive'], version = '1.3.0' }
parking_lot = "0.10.0"
alt_serde = { version = "1", default-features = false, features = ["derive"] }

# `alt_serde_json` is not updated. This customized one has latest alloc feature and pull in `alt_serde`.

serde_json = { version = "1", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }

# Substrate dependencies

frame-support = { version = "2.0.0", default-features = false, path = "../../frame/support" }
frame-system = { version = "2.0.0", default-features = false, path = "../../frame/system" }

sp-runtime = { version = "2.0.0", default-features = false, path = "../../primitives/runtime" }
sp-core = { version = "2.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "2.0.0", default-features = false, path = "../../primitives/io" }
sp-std = { version = "2.0.0", default-features = false, path = "../../primitives/std" }
sp-storage = { version = "2.0.0", default-features = false, path = "../../primitives/storage" }

[features]
default = ['std']
std = [
	'parity-scale-codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
]
